# mongo-ui

./: README.md  components.json  package.json  vite.config.ts
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: db.rs  engine.rs  main.rs
src-tauri/src/engine/: bson.rs
src/api/: index.ts
src/components/: ConnectedPage.tsx  EditorTheme.ts  HomePage.tsx  SideBar.tsx  Tabs.css  Tabs.tsx
src/components/ui/: loading-spinner.tsx
src/context/: loading.tsx
src/lib/: utils.ts
