[package]
name = "mongo-ui"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1.7.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
tokio = { version = "1.36.0", features = ["full"] }
boa_engine = "0.18.0"
boa_gc = "0.18.0"
lazy_static = "1.4.0"
boa_runtime = "0.18.0"
anyhow = "1.0.81"
thiserror = "1.0.58"

[dependencies.mongodb]
version = "2.8.0"
features = ["sync"]
default-features = false

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
